--- a/src/components/ui/MainNavbar.css
+++ b/src/components/ui/MainNavbar.css
@@ -1,3 +1,8 @@
+.website-name {
+  font-size: 25px;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 975px) {
   .navbar-items {
     display: none;
