--- a/src/components/ui/MainNavbar.css
+++ b/src/components/ui/MainNavbar.css
@@ -7,6 +7,9 @@
   .website-name {
     font-size: 19px;
   }
+  #ant-header {
+    padding: 0 10px;
+  }
 }
 
 @media screen and (max-width: 975px) {
