--- a/src/components/ui/MainNavbar.css
+++ b/src/components/ui/MainNavbar.css
@@ -3,6 +3,10 @@
   font-weight: bold;
 }
 
+.drop-down {
+  display: none;
+}
+
 @media screen and (max-width: 575px) {
   .website-name {
     font-size: 19px;
@@ -15,5 +19,8 @@
 @media screen and (max-width: 975px) {
   .navbar-items {
     display: none;
+  }
+  .drop-down {
+    display: block;
   }
 }
