--- a/src/components/ui/CallOut.css
+++ b/src/components/ui/CallOut.css
@@ -10,6 +10,12 @@
   margin-bottom: 10px;
 }
 
+.call-out-paragraph {
+  font-size: 18px;
+  color: white;
+  margin-bottom: 10px;
+}
+
 @media screen and (max-width: 768px) {
   .call-out {
     padding: 80px;
@@ -17,5 +23,9 @@
 
   .call-out-heading {
     font-size: 28px;
+  }
+
+  .call-out-paragraph {
+    font-size: 16px;
   }
 }
