--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,5 +1,5 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .login-image {
-    border: 1px solid orange;
+    display: none;
   }
 }
